# reverse-solver

./: ExecSolver.sh  Makefile.am  Makefile.in  README.md  configure  configure.ac  example.apx  example_linsbichler.apx  example_unsat.apx  out.apx  output.apx
autom4te.cache/: output.0  requests  traces.0
resources/: Makefile  Makefile.am  Makefile.in
resources/test_extensions/1/: BA_100_20_1.apx  BA_120_20_2.apx  BA_40_30_3.apx  BA_40_60_2.apx  BA_40_80_4.apx  admbuster_1000.apx  admbuster_2000.apx  admbuster_20000.apx  admbuster_50000.apx  afinput_exp_acyclic_depvary_step5_batch_yyy08.apx  afinput_exp_acyclic_indvary1_step3_batch_yyy06.apx  afinput_exp_acyclic_indvary3_step7_batch_yyy01.apx  afinput_exp_cycles_indvary1_step8_batch_yyy08.apx  afinput_exp_cycles_indvary3_step4_batch_yyy03.apx  ferry2.pfile-L2-C1-02.pddl.2.cnf.apx  ferry2.pfile-L2-C2-06.pddl.2.cnf.apx  ferry2.pfile-L2-C2-08.pddl.2.cnf.apx  ferry2.pfile-L2-C4-07.pddl.3.cnf.apx  ferry2.pfile-L3-C1-04.pddl.3.cnf.apx  grd_156_3_6.apx  grd_1892_1_3.apx  grd_1948_5_1.apx  grd_3018_3_7.apx  massachusetts-archiver_20090912_0208.gml.50.apx  massachusetts_blockislandferry_2015-11-13.gml.80.apx  sembuster_1200.apx  sembuster_60.apx  sembuster_600.apx  sembuster_900.apx  stb_138_162.apx  stb_161_74.apx  stb_199_128.apx  university-of-pretoria_20150805_1406.normalized.gml.80.apx
resources/test_extensions/2/: BA_140_30_5.apx  BA_160_20_3.apx  BA_40_80_2.apx  BA_60_70_1.apx  BA_80_50_4.apx  WS_200_20_90_50.apx  admbuster_200000.apx  afinput_exp_acyclic_depvary_step8_batch_yyy09.apx  afinput_exp_acyclic_indvary2_step2_batch_yyy10.apx  afinput_exp_cycles_indvary2_step1_batch_yyy01.apx  bw2.pfile-3-02.pddl.2.cnf.apx  bw2.pfile-3-05.pddl.2.cnf.apx  bw2.pfile-3-08.pddl.2.cnf.apx  bw3.pfile-3-04.pddl.2.cnf.apx  commute.org_20140813_1738.gml.20.apx  comune-di-castellanza_20151218_2338.gml.80.apx  cooscounty_or_2015-12-03.gml.50.apx  ferry2.pfile-L3-C4-01.pddl.3.cnf.apx  grd_11095_2_10.apx  grd_11564_1_6.apx  grd_14020_4_10.apx  grd_14060_1_7.apx  long-island-rail-road_20140216_0114.gml.20.apx  sembuster_1500.apx  sembuster_1800.apx  sembuster_2400.apx  sembuster_4800.apx  sembuster_6000.apx  stb_287_202.apx  stb_291_2.apx  stb_330_291.apx  stb_410_118.apx  stb_625_161.apx
src/: Main.cc  Makefile.am  Makefile.in
src/parser/: AspartixFormatParser.cc  AspartixFormatParser.h  AspartixParser.cc  AspartixParser.h  CNFFormatParser.cc  CNFFormatParser.h  ExtensionParser.cc  ExtensionParser.h  IParser.h  QdimacsParser.cc  QdimacsParser.h  TrivialGraphFormatParser.cc  TrivialGraphFormatParser.h
src/solver/: compute_formula_stable.cc  compute_formula_stable.h  compute_phi_s.cc  compute_phi_s.h
src/specs/: Accepted.cc  Accepted.h  Attacks.cc  Attacks.h  Defeated.cc  Defeated.h  LogStatMap.cc  VarMapAtt.cc  VarMapAtt.h  VarMapDet.cc  VarMapDet.h  VarMapP.cc  VarMapP.h  consignes.txt
src/utils/: CommandLineHelper.cc  CommandLineHelper.h
